--- a/style.css
+++ b/style.css
@@ -36,30 +36,34 @@ h1 {
   background-color: #46c5fb;
   color: white;
   font-weight: bold;
-  padding: 6px 13px;
+  padding: 9px 13px;
   text-align: center;
-  position: absolute;
-  left: 50%;
-  -ms-transform: translate(-50%);
-  transform: translate(-50%);
-  display: inline-block;
+  border: none;
+  display: grid;
+  margin: auto;
   font-size: 18px;
   transition-duration: 0.5s;
   cursor: pointer;
 }
 .Button:hover {
-  background-color: rgb(71, 143, 205);
-  color: white;
+  background-color: #111827;
+  color: #46c5fb;
+  /* border: 0.1px solid #46c5fb; */
 }
 .image {
   margin-left: 13%;
   margin-bottom: 5%;
   float: left;
   width: 30%;
-  height: fit-content;
+  display: flow-root;
 }
 .describe {
   text-align: left;
+  display: block;
+  font-size: 1rem;
+}
+.problem {
+  position: static;
 }
 .content-text {
   font-size: large;
@@ -88,6 +92,7 @@ h1 {
   width: 35%;
   border-radius: 0.5cm;
   float: left;
+  transition: transform 0.2s;
   margin-right: 8%;
   margin-bottom: 3%;
 }
@@ -95,16 +100,130 @@ h1 {
   width: 35%;
   border-radius: 0.5cm;
   float: right;
+  transition: transform 0.2s;
   margin-left: 8%;
   margin-bottom: 3%;
+}
+.file:hover {
+  transform: scale(1.2);
+}
+.file-1:hover {
+  transform: scale(1.2);
 }
 .con {
   text-align: left;
   margin-top: 3%;
   display: flow-root;
 }
-.dem {
+.reveal {
+  position: relative;
+  transform: translateY(75px);
+  opacity: 0;
+  transition: 1s all ease;
   margin-bottom: 7%;
+}
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+.contact {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.container .contactinfo {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.container .contactinfo .box {
+  position: relative;
+  padding: 20px 0px;
+  display: flex;
+}
+.container .contactinfo .box .icon {
+  min-width: 50px;
+  height: 50px;
+  background-color: #fff;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+}
+.container .contactinfo .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+.container .contactinfo .box .text h3 {
+  font-weight: 800;
+  color: #00bcd4;
+}
+.contactform {
+  width: 40%;
+  padding: 40px;
+  background: #fff;
+}
+.contactform h2 {
+  font-size: 30px;
+  color: #333;
+  font-weight: 800;
+}
+.contactform .inputbox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactform .inputbox input,
+textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0px;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+.contactform .inputbox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #666;
+}
+.contactform .inputbox input:focus ~ span,
+.contactform .inputbox input:valid ~ span,
+.contactform .inputbox textarea:focus ~ span,
+.contactform .inputbox textarea:valid ~ span {
+  color: #00bcd4;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+.contactform .inputbox input[type="submit"] {
+  width: 100px;
+  background-color: #00bcd4;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
 }
 @media only screen and (min-width: 300px) and (max-width: 800px) {
   .file {
@@ -112,6 +231,25 @@ h1 {
   }
   .file-1 {
     width: 100%;
+  }
+  .contact {
+    padding: 50px;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .container .contactinfo {
+    margin-bottom: 40px;
+    width: 100%;
+  }
+  .container .contactinfo {
+    width: 100%;
+  }
+  form {
+    display: none;
+  }
+  .contactform {
+    display: none;
   }
 }
 @media only screen and (min-width: 300px) and (max-width: 490px) {
@@ -122,5 +260,24 @@ h1 {
   .content-text {
     margin-left: 10%;
     margin-right: 10%;
+  }
+  form {
+    display: none;
+  }
+  .contact {
+    padding: 50px;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .container .contactinfo {
+    margin-bottom: 40px;
+    width: 100%;
+  }
+  .container .contactinfo {
+    width: 100%;
+  }
+  .contactform {
+    display: none;
   }
 }
