--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
   font-size: clamp(30px, 10vw, 45px);
   /* mobile ,weight , desktop*/
 }
+
 /* rgb(184, 253, 236), */
 .content {
   /* font-size: clamp(18px, 1vw, 20px); */
@@ -116,20 +117,20 @@ h1 {
   cursor: pointer;
 }
 .file {
-  width: 35%;
+  width: 40%;
   border-radius: 0.5cm;
   float: left;
-  transition: transform 0.2s;
+  transition: transform 0.4s;
   margin-right: 8%;
-  margin-bottom: 3%;
+  margin-bottom: 10%;
 }
 .file-1 {
-  width: 35%;
+  width: 40%;
   border-radius: 0.5cm;
   float: right;
-  transition: transform 0.2s;
+  transition: transform 0.4s;
   margin-left: 8%;
-  margin-bottom: 3%;
+  margin-bottom: 10%;
 }
 .file:hover {
   transform: scale(1.2);
@@ -139,15 +140,32 @@ h1 {
 }
 .con {
   text-align: left;
-  margin-top: 3%;
+  background-color: #172136;
   display: flow-root;
+  padding: 15px;
+  position: relative;
+  transition: transform 0.5s;
+  margin-top: 3%;
+}
+.con:hover {
+  transform: scale(1.05);
+}
+.skilldisplay {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.coln {
+  width: 50%;
+  display: table;
+  float: left;
 }
 .reveal {
   position: relative;
   transform: translateY(100px);
   opacity: 0;
   transition: 1s all ease;
-  margin-bottom: 7%;
+  margin-bottom: 10%;
 }
 .reveal.active {
   transform: translateY(0);
@@ -256,8 +274,21 @@ textarea {
   .file {
     width: 100%;
   }
+  h2 {
+    background-image: linear-gradient(to right, #f8a59c 0%, #ff00cc 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
   .file-1 {
     width: 100%;
+  }
+  .file-1:hover {
+    transform: scale(1.05);
+  }
+  .file:hover {
+    transform: scale(1.05);
   }
   .skills {
     width: 100%;
@@ -287,6 +318,13 @@ textarea {
     margin-top: 5%;
     width: 80%;
   }
+  h2 {
+    background-image: linear-gradient(to right, #f8a59c 0%, #ff00cc 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
   .content-text {
     margin-left: 10%;
     margin-right: 10%;
@@ -309,5 +347,11 @@ textarea {
   }
   .contactform {
     display: none;
+  }
+  .file:hover {
+    transform: scale(1.1);
+  }
+  .file-1:hover {
+    transform: scale(1.1);
   }
 }
