--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   color: rgb(231, 229, 229);
@@ -171,105 +172,127 @@ h1 {
   transform: translateY(0);
   opacity: 1;
 }
-.contact {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
 .container {
+  padding: 10px 10%;
+}
+
+nav ul li a:hover::after {
   width: 100%;
+}
+
+.row {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.about-col-1 {
+  flex-basis: 35%;
+}
+
+.about-col-1 img {
+  width: 100%;
+  border-radius: 15px;
+}
+
+.about-col-2 {
+  flex-basis: 60%;
+}
+
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #fff;
+  transition: background 0.5s;
+}
+
+.btn:hover {
+  background: #ff004f;
+}
+
+/* ----------------contact------------------ */
+.contact-left {
+  flex-basis: 30%;
+}
+.contact-right {
+  flex-basis: 60%;
+}
+
+.contact-left p {
   margin-top: 30px;
 }
-.container .contactinfo {
-  width: 50%;
+
+.contact-left p i {
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 25px;
+}
+i {
+  display: inline-block;
+}
+.icons-info {
   display: flex;
   flex-direction: column;
+  position: static;
 }
-.container .contactinfo .box {
-  position: relative;
-  padding: 20px 0px;
-  display: flex;
+.social-icons {
+  margin: 30px;
 }
-.container .contactinfo .box .icon {
-  min-width: 50px;
-  height: 50px;
-  background-color: #fff;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  font-size: 22px;
-}
-.container .contactinfo .box .text {
-  display: flex;
-  margin-left: 20px;
-  font-size: 16px;
-  color: #fff;
-  flex-direction: column;
-  font-weight: 300;
-}
-.container .contactinfo .box .text h3 {
-  font-weight: 800;
-  color: #00bcd4;
-}
-.contactform {
-  width: 40%;
-  padding: 40px;
-  background: #fff;
-}
-.contactform h2 {
+
+.social-icons a {
+  text-decoration: none;
   font-size: 30px;
-  color: #333;
-  font-weight: 800;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block;
+  transition: transform 0.5s;
 }
-.contactform .inputbox {
-  position: relative;
-  width: 100%;
-  margin-top: 10px;
+
+.social-icons a:hover {
+  color: #ff004f;
+  transform: translateY(-5px);
 }
-.contactform .inputbox input,
-textarea {
+
+.btn.btn2 {
+  display: inline-block;
+  background: #ff004f;
+}
+
+.contact-right form {
   width: 100%;
-  padding: 5px 0;
-  font-size: 16px;
-  margin: 10px 0px;
-  border: none;
-  border-bottom: 2px solid #333;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
   outline: none;
-  resize: none;
-}
-.contactform .inputbox span {
-  position: absolute;
-  left: 0;
-  padding: 5px 0;
-  font-size: 16px;
-  margin: 10px 0;
-  pointer-events: none;
-  transition: 0.5s;
-  color: #666;
-}
-.contactform .inputbox input:focus ~ span,
-.contactform .inputbox input:valid ~ span,
-.contactform .inputbox textarea:focus ~ span,
-.contactform .inputbox textarea:valid ~ span {
-  color: #00bcd4;
-  font-size: 12px;
-  transform: translateY(-20px);
-}
-.contactform .inputbox input[type="submit"] {
-  width: 100px;
-  background-color: #00bcd4;
+  background: #172136;
+  padding: 15px;
+  margin: 15px 0;
   color: #fff;
-  border: none;
-  cursor: pointer;
+  text-decoration: none;
   font-size: 18px;
+  border-radius: 6px;
 }
+::-webkit-input-placeholder {
+  color: rgb(231, 229, 229);
+}
+
+form .btn2 {
+  padding: 14px 16px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+/* ---------css for small screen------------ */
+
 @media only screen and (min-width: 300px) and (max-width: 800px) {
   .file {
     width: 100%;
@@ -293,26 +316,13 @@ textarea {
   .skills {
     width: 100%;
   }
-  .contact {
-    padding: 50px;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .container .contactinfo {
-    margin-bottom: 40px;
-    width: 100%;
-  }
-  .container .contactinfo {
-    width: 100%;
-  }
-  form {
-    display: none;
-  }
-  .contactform {
-    display: none;
+
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
   }
 }
+
 @media only screen and (min-width: 300px) and (max-width: 490px) {
   .image {
     margin-top: 5%;
@@ -328,25 +338,6 @@ textarea {
   .content-text {
     margin-left: 10%;
     margin-right: 10%;
-  }
-  form {
-    display: none;
-  }
-  .contact {
-    padding: 50px;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .container .contactinfo {
-    margin-bottom: 40px;
-    width: 100%;
-  }
-  .container .contactinfo {
-    width: 100%;
-  }
-  .contactform {
-    display: none;
   }
   .file:hover {
     transform: scale(1.1);
